--- a/index.html
+++ b/index.html
@@ -14,23 +14,29 @@
 
 </head>
 
-<body class="btn btn-info">
+<body>
     <div class="container">
         <center>
             <h1><b>Collage Web App</b></h1>
             <hr>
-            <h4 style="color: red;">As soon as the popup appears, please click Allow. After you've spoken a command,</h4>
-            <h3>Say "selfie" for taking your selfie and makig a Collage</h3>
-            <button id="btn_start" class="btn btn-danger" onclick="save()">Start Recording</button>
-            <h4>Click on the Start Recording button</h4>
+            <h4 style="color: red; font-family: 'Dancing Script', cursive;"><b>As soon as the popup appears, please click Allow. After you've spoken a command,</b></h4>
+            <h3 style="font-family: 'Special Elite', cursive;">Say "selfie" for taking your selfie and makig a Collage</h3>
+            <textarea id="textbox" class="form-control" readonly="true"></textarea><br>
+            <button id="btn_start" class="btn btn-danger" onclick="start()">Start Recording</button>
+            <h4 style="font-family: 'Dancing Script', cursive; color: red;"><b>Click on the Start Recording button</b></h4>
+
             <label>Your Webcam :</label>
-            <div id="camera"></div>
-            <label>Your selfie will display here :</label>
+            <div id="camera"></div><br><br>
+            <label>Your selfie will display here :</label> `
+
             <div id="result1"><img src="auroville1.jpg"></div><br>
             <div id="result2"><img src="Maldives.jpeg"></div><br>
             <div id="result2"><img src="puff_pastry.jpg"></div><br>
+
+            <div id="footer"><b>- By Tanisha</b></div>
         </center>
     </div>
+    <script src="main.js"></script>
 </body>
 
 </html>
